fix toggle button overlapping

--- a/assets/css/component/a11y.css
+++ b/assets/css/component/a11y.css
@@ -256,7 +256,7 @@ label.range > output {
 input.toggle + label {
     display: flex;
     position: relative;
-    padding-right: 3.6rem;
+    padding-right: 3rem !important;
     align-items: center;
     font-weight: bold;
 }
